# factorlab

./: .coverage  CHANGELOG.md  Makefile  README.md  bandit.ini  check.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: make.yml
docs/: USAGE.md
src/factorlab/: __init__.py  __main__.py  cli.py  exceptions.py  service.py  strategies.py
src/factorlab/tools/: black_safe.py
tests/: test_black_safe.py  test_cli.py  test_cli_extra.py  test_cli_internal.py  test_cli_more.py  test_exceptions.py  test_main_module.py  test_more_cli.py  test_more_edges.py  test_more_service.py  test_service.py  test_service_extra.py  test_service_more.py  test_strategies.py  test_strategies_factory.py
